Added ItemAttributeModifierEvent hook to take values from JSON hashmap to update items. TODO: make an item cache for the client, so we don't check the hashtable every tick.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -25,7 +25,13 @@
   "idf.dark_resistance_tooltip": "◑ Dark Resistance ",
 
   "idf.defense_tooltip": "◑ Defense ",
+  "idf.knockback_resistance_tooltip": "◑ Knockback Resistance ",
   "idf.attack_speed_tooltip": "⚔ Attack Speed ",
+  "idf.knockback_tooltip": "⚔ Knockback ",
+
+  "idf.maxhp_tooltip": "♥ Health",
+  "idf.luck_tooltip": "☘ Luck",
+  "idf.movespeed_tooltip": "⚜ Movement Speed",
 
 
   "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯",
