--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -39,8 +39,8 @@
 
 
   "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯",
-  "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯",
-  "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯",
+  "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯⋯",
+  "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯",
 
   "idf.black_diamond": "❖",
   "idf.fleur_de_lis": "⚜",
