--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -12,6 +12,7 @@
   "idf.attribute.evasion": "Evasion",
   "idf.attribute.lifesteal": "Lifesteal",
   "idf.attribute.penetrating": "IDF.PENETRATING",
+  "idf.attribute.crit_chance": "Critical Chance",
   "idf.attribute.slowing": "Slowing",
 
   "idf.stats.fire_damage": "Fire Damage",
@@ -25,13 +26,33 @@
   "idf.stats.dark_damage": "Dark Damage",
   "idf.stats.dark_damage.tooltip": "Attacking an entity with this item deals §e%s §rdark damage",
 
+  "idf.attack_icon": "\u0021 ",
+  "idf.resistance_icon": "\u0022 ",
+  "idf.physical_icon": "\u0039 ",
+  "idf.fire_icon": "\u0023 ",
+  "idf.water_icon": "\u0024 ",
+  "idf.lightning_icon": "\u0025 ",
+  "idf.magic_icon": "\u0026 ",
+  "idf.dark_icon": "\u0027 ",
+  "idf.defense_icon": "\u0030 ",
+  "idf.knockback_resistance_icon": "\u0031 ",
+  "idf.knockback_icon": "\u0032 ",
+  "idf.crit_chance_icon": "\u0033 ",
+  "idf.pen_icon": "\u0034 ",
+  "idf.lifesteal_icon": "\u0035 ",
+  "idf.movespeed_icon": "\u0036 ",
+  "idf.attack_speed_icon": "⚔ ",
+  "idf.maxhp_icon": "♥ ",
+  "idf.luck_icon": "☘ ",
+  "idf.evasion_icon": "\u0041",
 
-  "idf.physical_damage_tooltip": "⚔ Physical Damage: ",
-  "idf.fire_damage_tooltip": "⚔ Fire Damage: ",
-  "idf.water_damage_tooltip": "⚔ Water Damage: ",
-  "idf.lightning_damage_tooltip": "⚔ Lightning Damage: ",
-  "idf.magic_damage_tooltip": "⚔ Magic Damage: ",
-  "idf.dark_damage_tooltip": "⚔ Dark Damage: ",
+
+  "idf.physical_damage_tooltip": "\u0022",
+  "idf.fire_damage_tooltip": "\u0022",
+  "idf.water_damage_tooltip": "\u0022",
+  "idf.lightning_damage_tooltip": "\u0022",
+  "idf.magic_damage_tooltip": "\u0022",
+  "idf.dark_damage_tooltip": "\u0022",
 
   "idf.physical_resistance_tooltip": "◑ Physical Resistance ",
   "idf.fire_resistance_tooltip": "◑ Fire Resistance ",
@@ -44,20 +65,22 @@
   "idf.knockback_resistance_tooltip": "◑ Knockback Resistance ",
   "idf.attack_speed_tooltip": "⚔ Attack Speed ",
   "idf.knockback_tooltip": "⚔ Knockback ",
+  "idf.crit_chance_tooltip": "CRITCHANCE",
+  "idf.penetration_tooltip": "PEN",
+  "idf.lifesteal_tooltip": "LIFESTEAL",
 
   "idf.maxhp_tooltip": "♥ Health",
   "idf.luck_tooltip": "☘ Luck",
   "idf.movespeed_tooltip": "⚜ Movement Speed",
 
+  "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯⋯⋯",
+  "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯⋯⋯⋯",
+  "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯⋯⋯",
 
-  "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯",
-  "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯⋯",
-  "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯",
-
-  "idf.black_diamond": "❖",
+  "idf.black_diamond": "❖ ",
   "idf.fleur_de_lis": "⚜",
   "idf.right_arrow": "➢",
-  "idf.damage.symbol": "⚔",
+  "idf.damage.symbol": "⚔ ",
   "idf.resistance.symbol": "Ω",
   "idf.defense.symbol":"◐"
 
