--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -41,7 +41,7 @@
   "idf.pen_icon": "\u0034 ",
   "idf.lifesteal_icon": "\u0035 ",
   "idf.movespeed_icon": "\u0036 ",
-  "idf.attack_speed_icon": "⚔ ",
+  "idf.attack_speed_icon": "\u0042 ",
   "idf.maxhp_icon": "♥ ",
   "idf.luck_icon": "☘ ",
   "idf.evasion_icon": "\u0041",
