--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -28,6 +28,7 @@
 
   "idf.attack_icon": "\u0021 ",
   "idf.resistance_icon": "\u0022 ",
+  "idf.auxiliary_icon": "\u0052 ",
   "idf.physical_icon": "\u0039 ",
   "idf.fire_icon": "\u0023 ",
   "idf.water_icon": "\u0024 ",
@@ -44,38 +45,42 @@
   "idf.attack_speed_icon": "\u0042 ",
   "idf.maxhp_icon": "♥ ",
   "idf.luck_icon": "☘ ",
-  "idf.evasion_icon": "\u0041",
+  "idf.evasion_icon": "\u0041 ",
+  "idf.attack_multiply_base_icon": "\u0050 ",
+  "idf.attack_multiply_total_icon": "\u0051 ",
+  "idf.auxiliary_multiply_base_icon": "\u0053 ",
+  "idf.auxiliary_multiply_total_icon": "\u0054 ",
+  "idf.resistance_multiply_base_icon": "\u0044 ",
+  "idf.resistance_multiply_total_icon": "\u0045 ",
 
+  "enchantment.idf.fire_damage_flat": "Flat Fire Damage",
+  "enchantment.idf.water_damage_flat": "Flat Water Damage",
+  "enchantment.idf.lightning_damage_flat": "Flat Lightning Damage",
+  "enchantment.idf.magic_damage_flat": "Flat Magic Damage",
+  "enchantment.idf.dark_damage_flat": "Flat Dark Damage",
+  "enchantment.idf.fire_damage_mult": "Amp Fire Damage",
+  "enchantment.idf.water_damage_mult": "Amp Water Damage",
+  "enchantment.idf.lightning_damage_mult": "Amp Lightning Damage",
+  "enchantment.idf.magic_damage_mult": "Amp Magic Damage",
+  "enchantment.idf.dark_damage_mult": "Amp Dark Damage",
+  "enchantment.idf.fire_resist_flat": "Flat Fire resist",
+  "enchantment.idf.water_resist_flat": "Flat Water resist",
+  "enchantment.idf.lightning_resist_flat": "Flat Lightning resist",
+  "enchantment.idf.magic_resist_flat": "Flat Magic resist",
+  "enchantment.idf.dark_resist_flat": "Flat Dark resist",
+  "enchantment.idf.fire_resist_mult": "Amp Fire resist",
+  "enchantment.idf.water_resist_mult": "Amp Water resist",
+  "enchantment.idf.lightning_resist_mult": "Amp Lightning resist",
+  "enchantment.idf.magic_resist_mult": "Amp Magic resist",
+  "enchantment.idf.dark_resist_mult": "Amp Dark resist",
 
-  "idf.physical_damage_tooltip": "\u0022",
-  "idf.fire_damage_tooltip": "\u0022",
-  "idf.water_damage_tooltip": "\u0022",
-  "idf.lightning_damage_tooltip": "\u0022",
-  "idf.magic_damage_tooltip": "\u0022",
-  "idf.dark_damage_tooltip": "\u0022",
-
-  "idf.physical_resistance_tooltip": "◑ Physical Resistance ",
-  "idf.fire_resistance_tooltip": "◑ Fire Resistance ",
-  "idf.water_resistance_tooltip": "◑ Water Resistance ",
-  "idf.lightning_resistance_tooltip": "◑ Lightning Resistance ",
-  "idf.magic_resistance_tooltip": "◑ Magic Resistance ",
-  "idf.dark_resistance_tooltip": "◑ Dark Resistance ",
-
-  "idf.defense_tooltip": "◑ Defense ",
-  "idf.knockback_resistance_tooltip": "◑ Knockback Resistance ",
-  "idf.attack_speed_tooltip": "⚔ Attack Speed ",
-  "idf.knockback_tooltip": "⚔ Knockback ",
-  "idf.crit_chance_tooltip": "CRITCHANCE",
-  "idf.penetration_tooltip": "PEN",
-  "idf.lifesteal_tooltip": "LIFESTEAL",
-
-  "idf.maxhp_tooltip": "♥ Health",
-  "idf.luck_tooltip": "☘ Luck",
-  "idf.movespeed_tooltip": "⚜ Movement Speed",
 
   "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯⋯⋯",
   "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯⋯⋯⋯",
   "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯⋯⋯",
+  "idf.multipliers.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Multipliers ⋙⋯⋯⋯⋯⋯⋯⋯",
+  "idf.operation1.tooltip": "MULTIPLY BASE:",
+  "idf.operation2.tooltip": "MULTIPLY TOTAL:",
 
   "idf.black_diamond": "❖ ",
   "idf.fleur_de_lis": "⚜",
