--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -69,6 +69,9 @@
   "idf.luck_icon": "\u0045",
   "idf.evasion_icon": "\u0041",
   "idf.durability_icon": "\u0046",
+  "idf.strike_icon": "\u0051",
+  "idf.pierce_icon": "\u0052",
+  "idf.slash_icon": "\u0053",
 
   "idf.physical_damage_tooltip": " Physical Damage: ",
   "idf.fire_damage_tooltip": " Fire Damage: ",
@@ -94,6 +97,9 @@
   "idf.maxhp_tooltip": " Bonus Max HP: ",
   "idf.luck_tooltip": " Luck: ",
   "idf.evasion_tooltip": " Evasion Chance: ",
+  "idf.slash_tooltip": "Slash: ",
+  "idf.strike_tooltip": "Strike: ",
+  "idf.pierce_tooltip": "Pierce: ",
 
   "enchantment.idf.fire_damage_flat": "Flat Fire Damage",
   "enchantment.idf.water_damage_flat": "Flat Water Damage",
@@ -115,6 +121,27 @@
   "enchantment.idf.lightning_resist_mult": "Amp Lightning resist",
   "enchantment.idf.magic_resist_mult": "Amp Magic resist",
   "enchantment.idf.dark_resist_mult": "Amp Dark resist",
+
+  "enchantment.idf.fire_damage_flat_desc": "Increases fire damage by 1 per level.",
+  "enchantment.idf.water_damage_flat_desc": "Increases water damage by 1 per level.",
+  "enchantment.idf.lightning_damage_flat_desc": "Increases lightning damage by 1 per level.",
+  "enchantment.idf.magic_damage_flat_desc": "Increases magic damage by 1 per level.",
+  "enchantment.idf.dark_damage_flat_desc": "Increases dark damage by 1 per level.",
+  "enchantment.idf.fire_damage_mult_desc": "Increases overall fire damage by 5% per level",
+  "enchantment.idf.water_damage_mult_desc": "Increases overall water damage by 5% per level",
+  "enchantment.idf.lightning_damage_mult_desc": "Increases overall lightning damage by 5% per level",
+  "enchantment.idf.magic_damage_mult_desc": "Increases overall magic damage by 5% per level",
+  "enchantment.idf.dark_damage_mult_desc": "Increases overall dark damage by 5% per level",
+  "enchantment.idf.fire_resist_flat_desc": "Increases fire resist by 1 per level.",
+  "enchantment.idf.water_resist_flat_desc": "Increases water resist by 1 per level.",
+  "enchantment.idf.lightning_resist_flat_desc": "Increases lightning resist by 1 per level.",
+  "enchantment.idf.magic_resist_flat_desc": "Increases magic resist by 1 per level.",
+  "enchantment.idf.dark_resist_flat_desc": "Increases dark resist by 1 per level.",
+  "enchantment.idf.fire_resist_mult_desc": "Increases overall fire resist by 5% per level",
+  "enchantment.idf.water_resist_mult_desc": "Increases overall water resist by 5% per level",
+  "enchantment.idf.lightning_resist_mult_desc": "Increases overall lightning resist by 5% per level",
+  "enchantment.idf.magic_resist_mult_desc": "Increases overall magic resist by 5% per level",
+  "enchantment.idf.dark_resist_mult_desc": "Increases overall dark resist by 5% per level",
 
 
   "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯⋯⋯",
