--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -15,6 +15,11 @@
   "idf.attribute.penetrating": "Armour Penetration",
   "idf.attribute.weight": "Weight",
   "idf.attribute.crit_chance": "Critical Chance",
+  "idf.attribute.strike_mult": "Strike Multiplier",
+  "idf.attribute.pierce_mult": "Pierce Multiplier",
+  "idf.attribute.slash_mult": "Slash Multiplier",
+  "idf.attribute.crush_mult": "Crush Multiplier",
+  "idf.attribute.generic_mult": "Generic Multiplier",
 
   "//ATTRIBUTES_2": "NEEDED FOR TOOLTIPS",
   "idf.fire_damage": "Fire Damage",
@@ -47,34 +52,85 @@
   "idf.attack_speed": "Attack Speed",
   "idf.luck": "Luck",
 
-  "//ICON DEFINITIONS": "USED VARIOUS PLACES",
-  "idf.attack_icon": "\u0021",
-  "idf.resistance_icon": "\u0022",
-  "idf.auxiliary_icon": "\u0043",
-  "idf.physical_icon": "\u0039",
-  "idf.fire_icon": "\u0023",
-  "idf.water_icon": "\u0024",
-  "idf.lightning_icon": "\u0025",
-  "idf.magic_icon": "\u0026",
-  "idf.dark_icon": "\u0027",
-  "idf.defense_icon": "\u0030",
-  "idf.knockback_resistance_icon": "\u0031",
-  "idf.knockback_icon": "\u0032",
-  "idf.crit_chance_icon": "\u0033",
-  "idf.pen_icon": "\u0034",
-  "idf.lifesteal_icon": "\u0035",
-  "idf.movespeed_icon": "\u0036",
-  "idf.attack_speed_icon": "\u0042",
-  "idf.maxhp_icon": "\u0044",
-  "idf.luck_icon": "\u0045",
-  "idf.evasion_icon": "\u0041",
-  "idf.durability_icon": "\u0046",
-  "idf.strike_icon": "\u0051",
-  "idf.pierce_icon": "\u0052",
-  "idf.slash_icon": "\u0053",
-  "idf.crush_icon": "\u0050",
-  "idf.generic_icon": "\u0054",
-  "idf.weight_icon": "\u0055",
+  "//ICON DEFINITIONS_ICONS": "for 'icons' font",
+  "idf.icon.physical_attack": "\u0021",
+  "idf.icon.fire_attack": "\u0022",
+  "idf.icon.water_attack": "\u0023",
+  "idf.icon.lightning_attack": "\u0024",
+  "idf.icon.magic_attack": "\u0025",
+  "idf.icon.dark_attack": "\u0026",
+  "idf.icon.weight": "\u0027",
+  "idf.icon.attack_speed": "\u0028",
+  "idf.icon.damage_class": "\u0029",
+  "idf.icon.lifesteal": "\u002A",
+  "idf.icon.armour_penetration": "\u002B",
+  "idf.icon.critical_chance": "\u002C",
+  "idf.icon.knockback": "\u002D",
+  "idf.icon.1x14": "\u002E",
+  "idf.icon.1x15": "\u002F",
+  "idf.icon.physical_resistance": "\u0030",
+  "idf.icon.fire_resistance": "\u0031",
+  "idf.icon.water_resistance": "\u0032",
+  "idf.icon.lightning_resistance": "\u0033",
+  "idf.icon.magic_resistance": "\u0034",
+  "idf.icon.dark_resistance": "\u0035",
+  "idf.icon.defense": "\u0036",
+  "idf.icon.evasion": "\u0037",
+  "idf.icon.health": "\u0038",
+  "idf.icon.movespeed": "\u0039",
+  "idf.icon.knockback_resistance": "\u0041",
+  "idf.icon.luck": "\u0042",
+  "idf.icon.crush": "\u0043",
+  "idf.icon.strike": "\u0044",
+  "idf.icon.pierce": "\u0045",
+  "idf.icon.slash": "\u0046",
+  "idf.icon.generic": "\u0047",
+  "idf.icon.3x9": "\u0048",
+  "idf.icon.3x10": "\u0049",
+  "idf.icon.3x11": "\u004A",
+  "idf.icon.3x12": "\u004B",
+  "idf.icon.3x13": "\u004C",
+  "idf.icon.3x14": "\u004D",
+  "idf.icon.3x15": "\u004E",
+  "idf.icon.3x16": "\u004F",
+  "idf.icon.constitution": "\u0050",
+  "idf.icon.strength": "\u0051",
+  "idf.icon.dexterity": "\u0052",
+  "idf.icon.agility": "\u0053",
+  "idf.icon.intelligence": "\u0054",
+  "idf.icon.wisdom": "\u0055",
+  "idf.icon.faith": "\u0056",
+  "idf.icon.4x8": "\u0057",
+  "idf.icon.4x9": "\u0058",
+  "idf.icon.4x10": "\u0059",
+  "idf.icon.4x11": "\u005A",
+  "idf.icon.5x2": "\u0061",
+  "idf.icon.5x3": "\u0062",
+  "idf.icon.5x4": "\u0063",
+  "idf.icon.5x5": "\u0064",
+  "idf.icon.5x6": "\u0065",
+  "idf.icon.5x7": "\u0066",
+  "idf.icon.5x8": "\u0067",
+  "idf.icon.5x9": "\u0068",
+  "idf.icon.5x10": "\u0069",
+  "idf.icon.5x11": "\u006A",
+  "idf.icon.5x12": "\u006B",
+  "idf.icon.5x13": "\u006C",
+  "idf.icon.5x14": "\u006D",
+  "idf.icon.5x15": "\u006E",
+  "idf.icon.5x16": "\u006F",
+  "idf.icon.6x1": "\u0070",
+  "idf.icon.6x2": "\u0071",
+  "idf.icon.6x3": "\u0072",
+  "idf.icon.6x4": "\u0073",
+  "idf.icon.6x5": "\u0074",
+  "idf.icon.6x6": "\u0075",
+  "idf.icon.6x7": "\u0076",
+  "idf.icon.6x8": "\u0077",
+  "idf.icon.6x9": "\u0078",
+  "idf.icon.6x10": "\u0079",
+  "idf.icon.6x11": "\u007A",
+
   "idf.black_diamond": "❖ ",
   "idf.fleur_de_lis.symbol": "⚜",
   "idf.right_arrow.symbol": "➢",
@@ -115,8 +171,7 @@
   "idf.pierce_tooltip": " Pierce: ",
   "idf.crush_tooltip": " Crush: ",
   "idf.generic_tooltip": " Generic: ",
-  "idf.hold_shift_for_aux1": "Hold §eSHIFT§r to see auxiliary",
-  "idf.hold_shift_for_aux2": "  attributes and multipliers.",
+  "idf.hold_shift_for_aux": "Hold §eSHIFT§r to see auxiliary attributes and multipliers.",
 
   "//TOOLTIPS_4": "USED IN DESCRIPTION SECTION OF TOOLTIPS",
   "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯⋯⋯",
@@ -185,6 +240,8 @@
   "idf.update.command.success": "Server has been updated, and relevant clients have been notified.",
   "idf.update.command.failure": "Update request denied. You are not on a dedicated server!",
   "key.idf.open_stats": "Open Stats",
+  "idf.press_to_inspect": "Press §eI§r to inspect this item!",
+  "key.idf.inspect_item": "Inspect Item",
   "key.category.idf": "ImprovedDamageFramework",
   "idf.debug_message_on": "Debug enabled.",
   "idf.debug_message_off": "Debug disabled.",
