--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -1,25 +1,25 @@
 {
   "//ATTRIBUTES": "ATTRIBUTE NAMES",
-  "idf.attribute.fire_damage": "Fire Damage",
-  "idf.attribute.water_damage": "Water Damage",
-  "idf.attribute.lightning_damage": "Lightning Damage",
-  "idf.attribute.magic_damage": "Magic Damage",
-  "idf.attribute.dark_damage": "Dark Damage",
-  "idf.attribute.fire_resistance": "Fire Resistance",
-  "idf.attribute.water_resistance": "Water Resistance",
-  "idf.attribute.lightning_resistance": "Lightning Resistance",
-  "idf.attribute.magic_resistance": "Magic Resistance",
-  "idf.attribute.dark_resistance": "Dark Resistance",
-  "idf.attribute.evasion": "Evasion",
-  "idf.attribute.lifesteal": "Lifesteal",
-  "idf.attribute.penetrating": "Armour Penetration",
-  "idf.attribute.weight": "Weight",
-  "idf.attribute.crit_chance": "Critical Chance",
-  "idf.attribute.strike_mult": "Strike Multiplier",
-  "idf.attribute.pierce_mult": "Pierce Multiplier",
-  "idf.attribute.slash_mult": "Slash Multiplier",
-  "idf.attribute.crush_mult": "Crush Multiplier",
-  "idf.attribute.generic_mult": "Generic Multiplier",
+  "fire_damage": "Fire Damage",
+  "water_damage": "Water Damage",
+  "lightning_damage": "Lightning Damage",
+  "magic_damage": "Magic Damage",
+  "dark_damage": "Dark Damage",
+  "fire_resistance": "Fire Resistance",
+  "water_resistance": "Water Resistance",
+  "lightning_resistance": "Lightning Resistance",
+  "magic_resistance": "Magic Resistance",
+  "dark_resistance": "Dark Resistance",
+  "evasion": "Evasion",
+  "lifesteal": "Lifesteal",
+  "armour_penetration": "Armour Penetration",
+  "weight": "Weight",
+  "crit_chance": "Critical Chance",
+  "strike_mult": "Strike Multiplier",
+  "pierce_mult": "Pierce Multiplier",
+  "slash_mult": "Slash Multiplier",
+  "crush_mult": "Crush Multiplier",
+  "generic_mult": "Generic Multiplier",
 
   "//ATTRIBUTES_2": "NEEDED FOR TOOLTIPS",
   "idf.fire_damage": "Fire Damage",
@@ -53,33 +53,42 @@
   "idf.luck": "Luck",
 
   "//ICON DEFINITIONS_ICONS": "for 'icons' font",
-  "idf.icon.physical_attack": "\u0021",
-  "idf.icon.fire_attack": "\u0022",
-  "idf.icon.water_attack": "\u0023",
-  "idf.icon.lightning_attack": "\u0024",
-  "idf.icon.magic_attack": "\u0025",
-  "idf.icon.dark_attack": "\u0026",
+  "idf.icon.physical_damage": "\u0021",
+  "idf.icon.attribute.name.generic.attack_damage": "\u0021",
+  "idf.icon.fire_damage": "\u0022",
+  "idf.icon.water_damage": "\u0023",
+  "idf.icon.lightning_damage": "\u0024",
+  "idf.icon.magic_damage": "\u0025",
+  "idf.icon.dark_damage": "\u0026",
   "idf.icon.weight": "\u0027",
   "idf.icon.attack_speed": "\u0028",
+  "idf.icon.attribute.name.generic.attack_speed": "\u0028",
   "idf.icon.damage_class": "\u0029",
   "idf.icon.lifesteal": "\u002A",
   "idf.icon.armour_penetration": "\u002B",
-  "idf.icon.critical_chance": "\u002C",
+  "idf.icon.crit_chance": "\u002C",
   "idf.icon.knockback": "\u002D",
+  "idf.icon.attribute.name.generic.attack_knockback": "\u002D",
   "idf.icon.1x14": "\u002E",
   "idf.icon.1x15": "\u002F",
   "idf.icon.physical_resistance": "\u0030",
+  "idf.icon.attribute.name.generic.armor": "\u0030",
   "idf.icon.fire_resistance": "\u0031",
   "idf.icon.water_resistance": "\u0032",
   "idf.icon.lightning_resistance": "\u0033",
   "idf.icon.magic_resistance": "\u0034",
   "idf.icon.dark_resistance": "\u0035",
   "idf.icon.defense": "\u0036",
+  "idf.icon.attribute.name.generic.armor_toughness": "\u0036",
   "idf.icon.evasion": "\u0037",
   "idf.icon.health": "\u0038",
+  "idf.icon.attribute.name.generic.max_health": "\u0038",
   "idf.icon.movespeed": "\u0039",
+  "idf.icon.attribute.name.generic.movement_speed": "\u0039",
   "idf.icon.knockback_resistance": "\u0041",
+  "idf.icon.attribute.name.generic.knockback_resistance": "\u0041",
   "idf.icon.luck": "\u0042",
+  "idf.icon.attribute.name.generic.luck": "\u0042",
   "idf.icon.crush": "\u0043",
   "idf.icon.strike": "\u0044",
   "idf.icon.pierce": "\u0045",
