changed the way items work

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -13,7 +13,7 @@
   "evasion": "Evasion",
   "lifesteal": "Lifesteal",
   "armour_penetration": "Armour Penetration",
-  "weight": "Weight",
+  "force": "Force",
   "crit_chance": "Critical Chance",
   "strike_mult": "Strike Multiplier",
   "pierce_mult": "Pierce Multiplier",
@@ -34,7 +34,7 @@
   "idf.dark_resistance": "Dark Resistance",
   "idf.evasion": "Evasion",
   "idf.lifesteal": "Lifesteal",
-  "idf.weight": "Weight",
+  "idf.force": "Force",
   "idf.penetrating": "Armour Penetration",
   "idf.crit_chance": "Critical Chance",
 
@@ -60,13 +60,14 @@
   "idf.icon.lightning_damage": "\u0024",
   "idf.icon.magic_damage": "\u0025",
   "idf.icon.dark_damage": "\u0026",
-  "idf.icon.weight": "\u0027",
+  "idf.icon.force": "\u0027",
   "idf.icon.attack_speed": "\u0028",
   "idf.icon.attribute.name.generic.attack_speed": "\u0028",
   "idf.icon.damage_class": "\u0029",
   "idf.icon.lifesteal": "\u002A",
   "idf.icon.armour_penetration": "\u002B",
   "idf.icon.crit_chance": "\u002C",
+  "idf.icon.critical_chance": "\u002C",
   "idf.icon.knockback": "\u002D",
   "idf.icon.attribute.name.generic.attack_knockback": "\u002D",
   "idf.icon.1x14": "\u002E",
@@ -94,7 +95,7 @@
   "idf.icon.pierce": "\u0045",
   "idf.icon.slash": "\u0046",
   "idf.icon.generic": "\u0047",
-  "idf.icon.3x9": "\u0048",
+  "idf.icon.durability": "\u0048",
   "idf.icon.3x10": "\u0049",
   "idf.icon.3x11": "\u004A",
   "idf.icon.3x12": "\u004B",
@@ -113,12 +114,12 @@
   "idf.icon.4x9": "\u0058",
   "idf.icon.4x10": "\u0059",
   "idf.icon.4x11": "\u005A",
-  "idf.icon.5x2": "\u0061",
-  "idf.icon.5x3": "\u0062",
-  "idf.icon.5x4": "\u0063",
-  "idf.icon.5x5": "\u0064",
-  "idf.icon.5x6": "\u0065",
-  "idf.icon.5x7": "\u0066",
+  "idf.icon.fire": "\u0061",
+  "idf.icon.water": "\u0062",
+  "idf.icon.lightning": "\u0063",
+  "idf.icon.magic": "\u0064",
+  "idf.icon.dark": "\u0065",
+  "idf.icon.physical": "\u0066",
   "idf.icon.5x8": "\u0067",
   "idf.icon.5x9": "\u0068",
   "idf.icon.5x10": "\u0069",
@@ -189,7 +190,7 @@
   "idf.multipliers.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Multipliers ⋙⋯⋯⋯⋯⋯⋯⋯",
   "idf.auxiliary.tooltip":    "⋯⋯⋯⋯⋯⋯⋯⋘ Auxiliary ⋙⋯⋯⋯⋯⋯⋯⋯⋯⋯",
   "idf.attack_speed_tooltip": "§eAttack Speed§r: ",
-  "idf.weight_tooltip": "§8Weight§r: ",
+  "idf.force_tooltip": "§8Force§r: ",
   "idf.item.durability": "Durability",
   "idf.operation1.tooltip": "MULTIPLY BASE:",
   "idf.operation2.tooltip": "MULTIPLY TOTAL:",
