--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -40,7 +40,7 @@
 
   "//STAT SCREEN": "STAT SCREEN",
   "idf.stats_screen": "Stats Screen",
-  "idf.physical": "Physical",
+  "idf.stat_screen_physical_damage": "P.DMG",
   "idf.fire": "Fire",
   "idf.water": "Water",
   "idf.lightning": "Lightning",
@@ -53,13 +53,12 @@
   "idf.luck": "Luck",
 
   "//ICON DEFINITIONS_ICONS": "for 'icons' font",
-  "idf.icon.physical_damage": "\u0021",
-  "idf.icon.attribute.name.generic.attack_damage": "\u0021",
-  "idf.icon.fire_damage": "\u0022",
-  "idf.icon.water_damage": "\u0023",
-  "idf.icon.lightning_damage": "\u0024",
-  "idf.icon.magic_damage": "\u0025",
-  "idf.icon.dark_damage": "\u0026",
+  "idf.icon.damage": "\u0021",
+  "idf.icon.1x2": "\u0022",
+  "idf.icon.1x3": "\u0023",
+  "idf.icon.1x4": "\u0024",
+  "idf.icon.1x5": "\u0025",
+  "idf.icon.1x6": "\u0026",
   "idf.icon.force": "\u0027",
   "idf.icon.attack_speed": "\u0028",
   "idf.icon.attribute.name.generic.attack_speed": "\u0028",
@@ -72,13 +71,13 @@
   "idf.icon.attribute.name.generic.attack_knockback": "\u002D",
   "idf.icon.1x14": "\u002E",
   "idf.icon.1x15": "\u002F",
-  "idf.icon.physical_resistance": "\u0030",
+  "idf.icon.resistance": "\u0030",
   "idf.icon.attribute.name.generic.armor": "\u0030",
-  "idf.icon.fire_resistance": "\u0031",
-  "idf.icon.water_resistance": "\u0032",
-  "idf.icon.lightning_resistance": "\u0033",
-  "idf.icon.magic_resistance": "\u0034",
-  "idf.icon.dark_resistance": "\u0035",
+  "idf.icon.2x1": "\u0031",
+  "idf.icon.2x2": "\u0032",
+  "idf.icon.2x3": "\u0033",
+  "idf.icon.2x4": "\u0034",
+  "idf.icon.2x5": "\u0035",
   "idf.icon.defense": "\u0036",
   "idf.icon.attribute.name.generic.armor_toughness": "\u0036",
   "idf.icon.evasion": "\u0037",
@@ -119,8 +118,8 @@
   "idf.icon.lightning": "\u0063",
   "idf.icon.magic": "\u0064",
   "idf.icon.dark": "\u0065",
-  "idf.icon.physical": "\u0066",
-  "idf.icon.5x8": "\u0067",
+  "idf.icon.holy": "\u0066",
+  "idf.icon.physical": "\u0067",
   "idf.icon.5x9": "\u0068",
   "idf.icon.5x10": "\u0069",
   "idf.icon.5x11": "\u006A",
@@ -242,6 +241,5 @@
   "idf.stats.lifesteal": "Lifesteal",
   "idf.stats.lifesteal.tooltip": "+§e%s §rLifesteal",
   "idf.stats.crit_chance": "Critical Strike Chance",
-  "idf.stats.crit_chance.tooltip": "+§e%s §rCritical Strike Chance",
-
+  "idf.stats.crit_chance.tooltip": "+§e%s §rCritical Strike Chance"
 }
