finish implementing holy element.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -40,7 +40,35 @@
 
   "//STAT SCREEN": "STAT SCREEN",
   "idf.stats_screen": "Stats Screen",
-  "idf.stat_screen_physical_damage": "P.DMG",
+  "idf.stat_screen_physical_damage": "P.Dmg",
+  "idf.stat_screen_fire_damage": "F.Dmg",
+  "idf.stat_screen_water_damage": "W.Dmg",
+  "idf.stat_screen_lightning_damage": "L.Dmg",
+  "idf.stat_screen_magic_damage": "M.Dmg",
+  "idf.stat_screen_dark_damage": "D.Dmg",
+  "idf.stat_screen_holy_damage": "H.Dmg",
+  "idf.stat_screen_lifesteal": "L.Stl",
+  "idf.stat_screen_armour_penetration": "Pen.",
+  "idf.stat_screen_critical_chance": "Crit.",
+  "idf.stat_screen_force": "Force",
+  "idf.stat_screen_knockback": "KB.",
+  "idf.stat_screen_attack_speed": "A.Spd",
+  "idf.stat_screen_physical_resistance": "P.Res",
+  "idf.stat_screen_fire_resistance": "F.Res",
+  "idf.stat_screen_water_resistance": "W.Res",
+  "idf.stat_screen_lightning_resistance": "L.Res",
+  "idf.stat_screen_magic_resistance": "M.Res",
+  "idf.stat_screen_dark_resistance": "D.Res",
+  "idf.stat_screen_holy_resistance": "H.Res",
+  "idf.stat_screen_defense": "Def.",
+  "idf.stat_screen_evasion": "Eva.",
+  "idf.stat_screen_knockback_resistance": "KBR.",
+  "idf.stat_screen_strike": "Strk.",
+  "idf.stat_screen_pierce": "Prce.",
+  "idf.stat_screen_slash": "Slsh.",
+  "idf.stat_screen_max_health": "HP",
+  "idf.stat_screen_movespeed": "Spd.",
+  "idf.stat_screen_luck": "Luck",
   "idf.fire": "Fire",
   "idf.water": "Water",
   "idf.lightning": "Lightning",
