working on tooltips!

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -223,11 +223,11 @@
   "idf.item.durability": "Durability",
   "idf.operation1.tooltip": "  MULTIPLY BASE:",
   "idf.operation2.tooltip": "  MULTIPLY TOTAL:",
-  "idf.damage_class.tooltip.strike": "§2Damage Type§r: Strike",
-  "idf.damage_class.tooltip.pierce": "§2Damage Type§r: Pierce",
-  "idf.damage_class.tooltip.crush": "§2Damage Type§r: Crush",
-  "idf.damage_class.tooltip.slash": "§2Damage Type§r: Slash",
-  "idf.damage_class.tooltip.generic": "§2Damage Type§r: Generic",
+  "idf.damage_class.tooltip.strike": "Strike",
+  "idf.damage_class.tooltip.pierce": "Pierce",
+  "idf.damage_class.tooltip.crush": "Crush",
+  "idf.damage_class.tooltip.slash": "Slash",
+  "idf.damage_class.tooltip.generic": "Generic",
 
   "//COMMANDS/MESSAGES": "USED VARIOUS PLACES",
   "idf.client.armour.map.updated": "Your armour values have been updated by the server.",
