added event to change default tags and attribute modifiers during startup.

--- a/src/main/resources/assets/idf/lang/en_us.json
+++ b/src/main/resources/assets/idf/lang/en_us.json
@@ -89,34 +89,33 @@
   "idf.icon.1x6": "\u0026",
   "idf.icon.force": "\u0027",
   "idf.icon.attack_speed": "\u0028",
-  "idf.icon.attribute.name.generic.attack_speed": "\u0028",
+  "icon.attribute.name.generic.attack_speed": "\u0028",
   "idf.icon.damage_class": "\u0029",
   "idf.icon.lifesteal": "\u002A",
   "idf.icon.armour_penetration": "\u002B",
   "idf.icon.crit_chance": "\u002C",
   "idf.icon.critical_chance": "\u002C",
   "idf.icon.knockback": "\u002D",
-  "idf.icon.attribute.name.generic.attack_knockback": "\u002D",
+  "icon.attribute.name.generic.attack_knockback": "\u002D",
   "idf.icon.1x14": "\u002E",
   "idf.icon.1x15": "\u002F",
   "idf.icon.resistance": "\u0030",
-  "idf.icon.attribute.name.generic.armor": "\u0030",
   "idf.icon.2x1": "\u0031",
   "idf.icon.2x2": "\u0032",
   "idf.icon.2x3": "\u0033",
   "idf.icon.2x4": "\u0034",
   "idf.icon.2x5": "\u0035",
   "idf.icon.defense": "\u0036",
-  "idf.icon.attribute.name.generic.armor_toughness": "\u0036",
+  "icon.attribute.name.generic.armor_toughness": "\u0036",
   "idf.icon.evasion": "\u0037",
   "idf.icon.health": "\u0038",
-  "idf.icon.attribute.name.generic.max_health": "\u0038",
+  "icon.attribute.name.generic.max_health": "\u0038",
   "idf.icon.movespeed": "\u0039",
-  "idf.icon.attribute.name.generic.movement_speed": "\u0039",
+  "icon.attribute.name.generic.movement_speed": "\u0039",
   "idf.icon.knockback_resistance": "\u0041",
-  "idf.icon.attribute.name.generic.knockback_resistance": "\u0041",
+  "icon.attribute.name.generic.knockback_resistance": "\u0041",
   "idf.icon.luck": "\u0042",
-  "idf.icon.attribute.name.generic.luck": "\u0042",
+  "icon.attribute.name.generic.luck": "\u0042",
   "idf.icon.crush": "\u0043",
   "idf.icon.strike": "\u0044",
   "idf.icon.pierce": "\u0045",
@@ -142,12 +141,26 @@
   "idf.icon.4x10": "\u0059",
   "idf.icon.4x11": "\u005A",
   "idf.icon.fire": "\u0061",
+  "icon.fire_damage": "\u0061",
+  "icon.fire_resistance": "\u0061",
   "idf.icon.water": "\u0062",
+  "icon.water_damage": "\u0062",
+  "icon.water_resistance": "\u0062",
   "idf.icon.lightning": "\u0063",
+  "icon.lightning_damage": "\u0063",
+  "icon.lightning_resistance": "\u0063",
   "idf.icon.magic": "\u0064",
+  "icon.magic_damage": "\u0064",
+  "icon.magic_resistance": "\u0064",
   "idf.icon.dark": "\u0065",
+  "icon.dark_damage": "\u0065",
+  "icon.dark_resistance": "\u0065",
   "idf.icon.holy": "\u0066",
+  "icon.holy_damage": "\u0066",
+  "icon.holy_resistance": "\u0066",
   "idf.icon.physical": "\u0067",
+  "icon.attribute.name.generic.attack_damage": "\u0067",
+  "icon.attribute.name.generic.armor": "\u0067",
   "idf.icon.5x9": "\u0068",
   "idf.icon.5x10": "\u0069",
   "idf.icon.5x11": "\u006A",
@@ -178,51 +191,9 @@
   "idf.halfmoon.symbol":"◐",
   "idf.infinity.symbol": ": ∞",
 
-  "//TOOLTIPS": "USED IN DAMAGE SECTION OF TOOLTIPS",
-  "idf.physical_damage_tooltip": " Physical Damage: ",
-  "idf.fire_damage_tooltip": " Fire Damage: ",
-  "idf.water_damage_tooltip": " Water Damage: ",
-  "idf.lightning_damage_tooltip": " Lightning Damage: ",
-  "idf.magic_damage_tooltip": " Magic Damage: ",
-  "idf.dark_damage_tooltip": " Dark Damage: ",
-
-  "//TOOLTIPS_2": "USED IN DEFENSE SECTION OF TOOLTIPS",
-  "idf.defense_tooltip": " Defense: ",
-  "idf.physical_resistance_tooltip": " Physical Resistance: ",
-  "idf.fire_resistance_tooltip": " Fire Resistance: ",
-  "idf.water_resistance_tooltip": " Water Resistance: ",
-  "idf.lightning_resistance_tooltip": " Lightning Resistance: ",
-  "idf.magic_resistance_tooltip": " Magic Resistance: ",
-  "idf.dark_resistance_tooltip": " Dark Resistance: ",
-
-  "//TOOLTIPS_3": "USED IN AUXILIARY SECTION OF TOOLTIPS",
-  "idf.knockback_resistance_tooltip": " Knockback Resistance: ",
-  "idf.knockback_tooltip": " Knockback: ",
-  "idf.crit_chance_tooltip": " Critical Chance: ",
-  "idf.pen_tooltip": " Armour Penetration: ",
-  "idf.lifesteal_tooltip": " Lifesteal: ",
-  "idf.movespeed_tooltip": " Movespeed: ",
-  "idf.maxhp_tooltip": " Max HP: ",
-  "idf.luck_tooltip": " Luck: ",
-  "idf.evasion_tooltip": " Evasion Chance: ",
-  "idf.slash_tooltip": " Slash: ",
-  "idf.strike_tooltip": " Strike: ",
-  "idf.pierce_tooltip": " Pierce: ",
-  "idf.crush_tooltip": " Crush: ",
-  "idf.generic_tooltip": " Generic: ",
-  "idf.hold_shift_for_aux": "Hold §eSHIFT§r to see auxiliary attributes and multipliers.",
-
-  "//TOOLTIPS_4": "USED IN DESCRIPTION SECTION OF TOOLTIPS",
-  "idf.description.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Description ⋙⋯⋯⋯⋯⋯⋯⋯",
-  "idf.enchantments.tooltip": "⋯⋯⋯⋯⋯⋯⋯⋘ Enchantments ⋙⋯⋯⋯⋯⋯⋯",
-  "idf.attributes.tooltip":   "⋯⋯⋯⋯⋯⋯⋯⋘ Attributes ⋙⋯⋯⋯⋯⋯⋯⋯⋯",
-  "idf.multipliers.tooltip":  "⋯⋯⋯⋯⋯⋯⋯⋘ Multipliers ⋙⋯⋯⋯⋯⋯⋯⋯",
-  "idf.auxiliary.tooltip":    "⋯⋯⋯⋯⋯⋯⋯⋘ Auxiliary ⋙⋯⋯⋯⋯⋯⋯⋯⋯⋯",
-  "idf.attack_speed_tooltip": "§eAttack Speed§r: ",
-  "idf.force_tooltip": "§7Force§r: ",
-  "idf.item.durability": "Durability",
-  "idf.operation1.tooltip": "  MULTIPLY BASE:",
-  "idf.operation2.tooltip": "  MULTIPLY TOTAL:",
+  "//TOOLTIPS": "",
+  "idf.damage.tooltip": "Damage",
+  "idf.resistance.tooltip": "Resistance",
   "idf.damage_class.tooltip.strike": "Strike",
   "idf.damage_class.tooltip.pierce": "Pierce",
   "idf.damage_class.tooltip.crush": "Crush",
